--- a/pages/game.html
+++ b/pages/game.html
@@ -16,7 +16,8 @@
    <title>Game</title>
 
 </head>
-<body id="box" >
+<body  >
+    <div id="box">
     <div id="roomId"></div>
         <template id="cursor">
 
@@ -93,6 +94,7 @@
             <div class="popupBtnDiv">
                 <a href="./menu.html" class="popupBtn" id="gameEnd">Go back</a>
             </div>
+        </div>
         </div>
 </body>
 </html>
