--- a/pages/game.html
+++ b/pages/game.html
@@ -8,6 +8,12 @@
     <script src="../scripts/game.js" defer></script>
     <link rel="stylesheet" href="../styles/game.css">
 
+    <link rel="prefetch" href="../assets/gamemusic.mp3">
+    <link rel="prefetch" href="../assets/explosion.wav">
+    <link rel="prefetch" href="../assets/victory.mp3">
+    <link rel="prefetch" href="../assets/lose.wav">
+
+
     <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
