--- a/pages/menu.html
+++ b/pages/menu.html
@@ -15,6 +15,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
     <link rel="manifest" href="../site.webmanifest">
 
+    <link rel="prefetch" href="../assets/menu.mp3">
+
+
     <script src="../scripts/menu.js" defer type="module"></script>
 
     <title>Menu</title>
